--- a/PlanIFTicateur/src/PlanIFTicateur/gui/MainWindow.form
+++ b/PlanIFTicateur/src/PlanIFTicateur/gui/MainWindow.form
@@ -175,6 +175,7 @@
                         <Container class="PlanIFTicateur.gui.HorairePanel" name="horairePanel">
                           <AuxValues>
                             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new PlanIFTicateur.gui.HorairePanel(this)"/>
+                            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
                           </AuxValues>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
