--- a/PlanIFTicateur/src/PlanIFTicateur/gui/frames/MainWindow.form
+++ b/PlanIFTicateur/src/PlanIFTicateur/gui/frames/MainWindow.form
@@ -33,6 +33,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Sauvegarder Sous"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="sauvegarderSousMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jSeparator2">
             </MenuItem>
