Jcombobox sélection de session

--- a/PlanIFTicateur/src/PlanIFTicateur/gui/frames/MainWindow.form
+++ b/PlanIFTicateur/src/PlanIFTicateur/gui/frames/MainWindow.form
@@ -86,7 +86,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="mainPanel" alignment="0" pref="594" max="32767" attributes="0"/>
+          <Component id="mainPanel" alignment="0" pref="629" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -117,6 +117,16 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
           <SubComponents>
+            <Component class="javax.swing.JComboBox" name="selecteurSession">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;Session d&apos;hiver&quot;, &quot;Session d&apos;&#xe9;t&#xe9;&quot;, &quot;Session d&apos;automne&quot; })" type="code"/>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="selecteurSessionActionPerformed"/>
+              </Events>
+            </Component>
             <Component class="javax.swing.JToggleButton" name="verificationAutoBouton">
               <Properties>
                 <Property name="text" type="java.lang.String" value="V&#xe9;rification Automatique"/>
@@ -227,7 +237,7 @@
                       <Layout>
                         <DimensionLayout dim="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <EmptySpace min="0" pref="576" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="611" max="32767" attributes="0"/>
                           </Group>
                         </DimensionLayout>
                         <DimensionLayout dim="1">
